trunk/Archive2/6d/01ee315a12d96c/output
main.cpp: In function 'int main()':
main.cpp:13:11: error: 'class std::map<int, P*>' has no member named 'add'
     p_map.add(0, new P);
           ^
